--- a/Design-Pattern/JavaFXQuizApp-DH23IT01/src/main/resources/com/qtk/javafxquizapp/dh23it01/questions.fxml
+++ b/Design-Pattern/JavaFXQuizApp-DH23IT01/src/main/resources/com/qtk/javafxquizapp/dh23it01/questions.fxml
@@ -13,7 +13,7 @@
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="Main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qtk.javafxquizapp.dh23it01.QuestionsController">
    <children>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Hquiz" text="Quản lý câu hỏi" />
-      <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Nội dung câu hỏi" />
+      <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Nội dung câu hỏi" styleClass="Main" stylesheets="@style.css" />
       <HBox prefHeight="100.0" prefWidth="200.0" styleClass="Main" stylesheets="@style.css">
          <children>
             <ComboBox prefWidth="150.0" promptText="Danh mục" />
