--- a/Design-Pattern/JavaFXQuizApp-DH23IT01/src/main/resources/com/qtk/javafxquizapp/dh23it01/questions.fxml
+++ b/Design-Pattern/JavaFXQuizApp-DH23IT01/src/main/resources/com/qtk/javafxquizapp/dh23it01/questions.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="Main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qtk.javafxquizapp.dh23it01.QuestionsController">
    <children>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Hquiz" text="Quản lý câu hỏi" />
@@ -34,7 +33,7 @@
                   <TextField promptText="Nội dung nhập lựa chọn" styleClass="Input" stylesheets="@style.css" />
                </children>
             </HBox>
-            <Button mnemonicParsing="false" text="Button" />
+            <Button mnemonicParsing="false" onAction="#handleAddChoice" text="Button" />
          </children>
       </VBox>
    </children>
