--- a/Design-Pattern/JavaFXQuizApp-DH23IT01/src/main/resources/com/qtk/javafxquizapp/dh23it01/questions.fxml
+++ b/Design-Pattern/JavaFXQuizApp-DH23IT01/src/main/resources/com/qtk/javafxquizapp/dh23it01/questions.fxml
@@ -3,23 +3,24 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="Main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qtk.javafxquizapp.dh23it01.QuestionsController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="763.0" prefWidth="600.0" styleClass="Main" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.qtk.javafxquizapp.dh23it01.QuestionsController">
    <children>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Hquiz" text="Quản lý câu hỏi" />
-      <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Nội dung câu hỏi" styleClass="Main" stylesheets="@style.css" />
+      <TextArea prefHeight="112.0" prefWidth="600.0" promptText="Nội dung câu hỏi" styleClass="Main" stylesheets="@style.css" />
       <HBox prefHeight="100.0" prefWidth="200.0" styleClass="Main" stylesheets="@style.css">
          <children>
-            <ComboBox prefWidth="150.0" promptText="Danh mục" />
-            <ComboBox prefWidth="150.0" promptText="Mức độ" />
+            <ComboBox fx:id="cbCates" prefWidth="150.0" promptText="Danh mục" />
+            <ComboBox fx:id="cbLevels" prefWidth="150.0" promptText="Mức độ" />
          </children>
       </HBox>
-      <VBox prefHeight="200.0" prefWidth="100.0" styleClass="Main" stylesheets="@style.css">
+      <VBox fx:id="vboxChoices" prefHeight="200.0" prefWidth="100.0" styleClass="Main" stylesheets="@style.css">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0" styleClass="Main" stylesheets="@style.css">
                <children>
@@ -36,5 +37,7 @@
             <Button mnemonicParsing="false" onAction="#handleAddChoice" text="Button" />
          </children>
       </VBox>
+      <TextField fx:id="textFiled" />
+      <TableView fx:id="tableViewQuestions" prefHeight="271.0" prefWidth="600.0" />
    </children>
 </VBox>
